--- a/css/main.css
+++ b/css/main.css
@@ -65,14 +65,17 @@ footer {
 
   #column-1 {
     background-color: lightgaey;
+    width: 50%;
   }
 
   #column-2 {
     background-color: gray;
+    width: 50%;
   }
 
   #column-3 {
-    background-color: darkgray;
+    background-color: yellow;
+    width: 100%;
   }
 
   footer {
@@ -90,14 +93,17 @@ footer {
 
   #column-1 {
     background-color: lightpink;
+    width: 33.3%;
   }
 
   #column-2 {
     background-color: red;
+    width: 33.3%;
   }
 
   #column-3 {
     background-color: rosybrown;
+    width: 33.3%;
   }
 
   footer {
